# rela

./: LICENSE.txt  README.md  pyproject.toml
rela/: __init__.py  _rela.py  _test.py  _utils.py
tests/: test_rela.py
